[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ScanAbs"
authors = [{name = "KOLANICH"}]
description = "An abstraction layer around port scanners and service fingerprinters."
readme = "ReadMe.md"
keywords = ["ScanAbs"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dependencies = [
	"MempipedPath", # @ https://codeberg.org/prebuilder/MempipedPath.py
	"sh", # @ https://github.com/amoffat/sh
	"kaitaistruct", # @ https://github.com/kaitai-io/kaitai_struct_python_runtime"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/KAbs/ScanAbs.py"

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
